--- a/htmlelements.html
+++ b/htmlelements.html
@@ -18,7 +18,7 @@ template.innerHTML = `
       width: 8rem;
       height: 4rem;
       border: none;
-      border-radius: 10px;
+      border-radius: 0.7rem;
       background-color: green;
       color: white;
     }
