Changed to rem.

--- a/litelement.html
+++ b/litelement.html
@@ -24,8 +24,8 @@ export class OkCancel extends LitElement {
       width: 8rem;
       height: 4rem;
       border: none;
-      border-radius: 10px;
-      background-color: seagreen;
+      border-radius: 0.7rem;
+      background-color: green;
       color: white;
     }
     button#cancel {
